--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
                     <a class="garden" href="./index.html">Web <span class="span">Studio</span></a>
                     <ul class="krater">
                         <li><a class="krater" href="./index.html">Studio</a></li>
-                        <li><a class="krater" href="./index.html">Portfolio</a></li>
-                        <li><a class="krater" href="./index.html">Contacts</a></li>
+                        <li><a class="krater" href="">Portfolio</a></li>
+                        <li><a class="krater" href="">Contacts</a></li>
                     </ul>
                 </nav>
                 <address class="address-class">
